force-app/main/default/objects/MockHTTPSetting__mdt/MockHTTPSetting__mdt.object-meta.xml
<CustomObject>
    <label>MockHTTPSetting</label>
    <pluralLabel>MockHTTPSettings</pluralLabel>
</CustomObject>