force-app/main/default/objects/MockHTTPSetting__mdt/fields/EndPointMatchPattern__c.field-meta.xml
<CustomField>
    <fullName>EndPointMatchPattern__c</fullName>
    <label>End Point Match Pattern</label>
    <length>200</length>
    <type>Text</type>
</CustomField>