force-app/main/default/objects/MockHTTPSetting__mdt/fields/HandlerInputs__c.field-meta.xml
<CustomField>
    <fullName>HandlerInputs__c</fullName>
    <description>JSON values for input</description>
    <label>HandlerInputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>