force-app/main/default/objects/MockHTTPSetting__mdt/fields/HTTPMethod__c.field-meta.xml
<CustomField>
    <fullName>HTTPMethod__c</fullName>
    <label>HTTPMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>