force-app/main/default/objects/MockHTTPSetting__mdt/fields/MockHandlerClass__c.field-meta.xml
<CustomField>
    <fullName>MockHandlerClass__c</fullName>
    <label>Mock Handler Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>